--- a/app/views/overviews/_tabs.html.erb
+++ b/app/views/overviews/_tabs.html.erb
@@ -43,10 +43,10 @@
 				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_slug: @selected_schedule), class:"dropdown-item", target: 'modal'  %>
 				<% end %>
 				<% end %>
-				<% if current_user.admin? && User::FinalGradeAssigner.available? %>
+				<% if current_user.admin? && current_schedule.defines_final_grades? %>
 				<div class="dropdown-divider"></div>
 				<%= link_to 'Calculate all final grades', assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
-				<% GradingConfig.final_grade_names.each do |grade_name| %>
+				<% current_schedule.grading_config.final_grade_names.each do |grade_name| %>
 				<%= link_to "Calculate final grades of type #{grade_name.humanize}", assign_all_final_schedule_grades_path(schedule_slug: @selected_schedule, grades: grade_name), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
 				<% end %>
 				<% end %>
