--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -4,8 +4,16 @@
     <% unless @subpages.any? %>
     <h1>Submit</h1>
     <% end %>
-    <% if @submit&.submitted_at # student did actually submit herself %>
-    <p><%= bootstrap_icon 'check2-all' %> <strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong></p>
+
+    <%# Mention if user has already submitted this problem before %>
+    <% if @submit.submitted_at.present? %>
+    <p>
+        <strong>
+            <%= bootstrap_icon 'check2-all' %>
+            <%= t 'submit.you_submitted_ago',
+            time: time_ago_in_words_or_more_precise(@submit.submitted_at) %>
+        </strong>
+    </p>
     <% end %>
 
     <% if !Submit.available? %>
@@ -16,22 +24,22 @@
     <% else %>
 
     <%# Mention the deadline first, but only if it is a hard deadline %>
-    <% if @page.pset.deadline.present? %>
+    <% if @deadline.present? %>
     <p>
         <%= bootstrap_icon 'calendar3' %>
-        <% if @page.pset.deadline.past? %>
-            <strong><%= t('submit.deadline_was', deadline: l(@page.pset.deadline, format: :deadline)).html_safe %></strong>
+        <% if @deadline.past? %>
+            <strong><%= t('submit.deadline_was', deadline: l(@deadline, format: :deadline)).html_safe %></strong>
             <% if @allow_submit %>
-            <% if Course.deadlines_hard? || @page.pset.deadline_hard? %>
+            <% if Course.deadlines_hard? || @submit.deadline_hard? %>
             <%= t 'submit.deadline_was_hard' %>
             <% else %>
             <%= t 'submit.deadline_was_soft'%>
             <% end %>
             <% end %>
         <% else %>
-            <strong><%= t('submit.deadline_is', deadline: l(@page.pset.deadline, format: :deadline)).html_safe %></strong>
+            <strong><%= t('submit.deadline_is', deadline: l(@deadline, format: :deadline)).html_safe %></strong>
             <% if @allow_submit %>
-            <% if Course.deadlines_hard? || @page.pset.deadline_hard? %>
+            <% if Course.deadlines_hard? || @submit.deadline_hard? %>
             <%= t 'submit.deadline_hard' %>
             <% else %>
             <%= t 'submit.deadline_soft'%>
@@ -55,11 +63,11 @@
     <% end %>
 
     <%# Provide (re-)submit instructions %>
-    <% if @allow_submit && !@previous_submit.present? %>
+    <% if @allow_submit && !@submit.persisted? %>
     <p>
         <%= t 'submit.instructions' %>
     </p>
-    <% elsif @allow_submit && @previous_submit.present? %>
+    <% elsif @allow_submit && @submit.persisted? %>
     <p>
         <%= bootstrap_icon 'check2-all' %>
         <%= t 'submit.until_deadline_new_version' %>
@@ -69,7 +77,7 @@
     <%# Provide specific reasons for NOT being able to submit %>
     <% if !@allow_submit %>
 
-    <% if @previous_submit&.grade_public? # grade has been published %>
+    <% if @submit.grade_public? # grade has been published %>
     <p>
         <%= bootstrap_icon 'check2-all' %>
         <%= t 'submit.submit_is_graded' %>
@@ -79,7 +87,7 @@
         <%= bootstrap_icon('exclamation-diamond') %>
         <%= t 'submit.cant_not_logged_in' %>
     </p>
-    <% elsif !@page.pset.submittable? && !@previous_submit&.grade_resubmit_exception? %>
+    <% elsif not @allow_submit %>
     <p>
         <%= bootstrap_icon('exclamation-diamond') %>
         <%= t 'submit.submit_closed' %>
