--- a/app/views/submits/_form.html.erb
+++ b/app/views/submits/_form.html.erb
@@ -48,8 +48,8 @@
 	</div>
 
 	<div id="grade-boxes" class="d-flex flex-wrap">
-		<% if @submit.pset.config && @submit.pset.config['subgrades'] %>
-		<% @submit.pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
+		<% if @submit.grading_config['subgrades'] %>
+		<% @submit.grading_config['subgrades'].each do |subgrade_name, subgrade_type| %>
 		<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
 		<div class="mb-2 flex-fill">
 			<label for="input_<%= subgrade_name %>" class="control-label ms-1 mb-0"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
@@ -69,7 +69,7 @@
 		<% end %>
 	</div>
 			
-	<% if current_user.admin? || not(@submit.pset.config && @submit.pset.config['subgrades'] && @submit.pset.config['calculation']) %>
+	<% if current_user.admin? || not(@submit.grading_config['subgrades'] && @submit.grading_config['calculation']) %>
 	<div class="mb-2">
 		<label for="submit_grade_attributes_grade" class="control-label ms-1 mb-0">Grade
 			<% if current_user.admin? && @grade.calculated_grade %>(<%= @grade.calculated_grade %>)<% end %>
