--- a/app/views/submits/_grade.erb
+++ b/app/views/submits/_grade.erb
@@ -24,8 +24,8 @@
 </div>
 
 <div id="grade-boxes" class="d-flex flex-wrap">
-	<% if @submit.pset.config && @submit.pset.config['subgrades'] %>
-	<% @submit.pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
+	<% if @submit.grading_config['subgrades'] %>
+	<% @submit.grading_config['subgrades'].each do |subgrade_name, subgrade_type| %>
 		<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
 		<div class=" flex-fill">
 			<label for="input_<%= subgrade_name %>" class="control-label"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
@@ -45,7 +45,7 @@
 </div>
 
 
-<% if current_user.admin? || not(@submit.pset.config && @submit.pset.config['subgrades'] && @submit.pset.config['calculation']) %>
+<% if current_user.admin? || not(@submit.grading_config['subgrades'] && @submit.grading_config['calculation']) %>
 <div class="">
 	<label for="grade_grade" class="control-label">Grade
 		<% if current_user.admin? && @grade.calculated_grade %>(<%= @grade.calculated_grade %>)<% end %>
