--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="turbo-prefetch" content="false">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/browser/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/browser/favicon-32x32.png">
