--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -11,6 +11,7 @@ URL: <%= link_to submit.url, submit.url %>
 	<li><code class="text-body"><%= name %></code></li>
 	<% end %>
 </ul>
+<%= link_to 'Download', submission_download_path(submit), class: 'btn btn-sm btn-secondary', data: { turbo: false } %>
 <% end %>
 <% if submit.has_auto_feedback? %>
 <%= link_to t("check_results"), submission_feedback_path(submit), class:"btn btn-secondary", target: 'modal' %>
