--- a/app/views/submissions/_grades_overview.html.erb
+++ b/app/views/submissions/_grades_overview.html.erb
@@ -31,7 +31,7 @@
                 <% definition['subgrades'].each do |subgrade| %>
                 <%# Print each subgrade if it exists for this grade, subgrades are not hidden, and the grade isn't unpublished. %>
                 <%# Else, print a dash. %>
-                <% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_subgrades'] && @grades_by_pset[submit].subgrades[subgrade] %>
+                <% if @grades_by_pset.key?(submit) && !current_schedule.grading_config.grades[submit]['hide_subgrades'] && @grades_by_pset[submit].subgrades[subgrade] %>
                 <td><%= translate_subgrade(@grades_by_pset[submit].subgrades[subgrade]) %></td>
                 <% else %>
                 <td>-</td>
@@ -40,7 +40,7 @@
                 <% if definition['show_calculated'] %>
                 <%# Print calculated grade for this submit if it is not unpublished or hidden. %>
                 <%# Else, print a dash. %>
-                <% if @grades_by_pset.key?(submit) && !Settings.grading['grades'][submit]['hide_calculated'] %>
+                <% if @grades_by_pset.key?(submit) && !current_schedule.grading_config.grades[submit]['hide_calculated'] %>
                 <td>
                     <% if definition['type'] == 'points' && @grades_by_pset[submit].assigned_grade == -1 %>
                     <%= weight %>
