--- a/app/assets/stylesheets/includes/overview.scss
+++ b/app/assets/stylesheets/includes/overview.scss
@@ -4,117 +4,107 @@
 
 #grade-table
 {
-	font-size:small;
-	width:auto;
+    font-size:small;
+    width:auto;
 }
 
 #grade-table td, #grade-table th
 {
-	vertical-align:middle;
-	padding:2px;
-	white-space:nowrap;
-	width:1.7rem;
+    vertical-align:middle;
+    padding:0;
+    white-space:nowrap;
+    width:1.7rem;
 }
 
 #grade-table td:nth-child(n+2), #grade-table th:nth-child(n+2)
 {
-	text-align:center;
-}
-
-#grade-table .auto-hide
-{
-	opacity:0.1;
-}
-
-#grade-table td:hover .auto-hide
-{
-	opacity:1;
+    text-align:center;
 }
 
 #grade-table tr:first-child
 {
-	background-color:transparent;
+    background-color:transparent;
 }
 
 #grade-table tr.sticky-1 th
 {
-	background-color: #FBF7F1;
-	position: sticky;
-	top:0;
-	z-index:2;
+    background-color: #FBF7F1;
+    position: sticky;
+    top:0;
+    z-index:2;
 }
 
 #grade-table tr.sticky-2 th
 {
-	background-color: #FBF7F1;
-	position: sticky;
-	top:0rem;
-	z-index:1;
+    background-color: #FBF7F1;
+    position: sticky;
+    top:0rem;
+    z-index:1;
 }
 
 //****************************************************************************
 
 #grade
 {
-	.grade-form
-	{
-		height:100%;
-	}
+    .grade-form
+    {
+        height:100%;
+    }
 
-	label
-	{
-		margin-left:.15em;
-		margin-bottom:0;
-		font-size:small;
-	}
+    label
+    {
+        margin-left:.15em;
+        margin-bottom:0;
+        font-size:small;
+    }
 
-	#grade-boxes .form-group:not(:last-child)
-	{
-		margin-right:.5rem;
-	}
+    #grade-boxes .form-group:not(:last-child)
+    {
+        margin-right:.5rem;
+    }
 }
 
 //****************************************************************************
 
 span.bubble {
-	display: inline-block;
-	vertical-align:top;
-	max-width:20em;
-	padding: 2em;
-	text-align: center;
-	background-color: #fff;
-	border: 2px solid #DCE0E4;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+    display: inline-block;
+    vertical-align:top;
+    max-width:20em;
+    padding: 2em;
+    text-align: center;
+    background-color: #fff;
+    border: 2px solid #DCE0E4;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #files
 {
-	padding-top:0.35rem;
+    padding-top:0.35rem;
 }
 
 #files .nav-item .nav-link
 {
-	padding:0.35rem;
+    padding:0.35rem;
 }
 
 #files .nav-item .nav-link.active
 {
-	background-color:#337BCF;
+    background-color:#337BCF;
 }
 
 //****************************************************************************
 
 .grade-button
 {
-	line-height: 1.1;
-	font-size: 12px;
-	padding: 0.25rem;
-	border: none;
+    line-height: 1.1;
+    font-size: 12px;
+    padding: 0.25rem;
+    border: none;
     border-radius: 0;
-	height:100%;
-    
+    height:100%;
+
     &.late
     {
         border-bottom: 2px dotted black;
@@ -123,24 +113,24 @@ span.bubble {
 
 .grade-button.btn-light, #grade-table td.bg-light
 {
-	color: var(--bs-light) !important;
-	background-color: transparent !important;
+    color: var(--bs-light) !important;
+    background-color: transparent !important;
 }
 
 .grade-button.btn-success, #grade-table td.bg-success
 {
-	color: var(--bs-light) !important;
-	background-color: #5dd49d !important;
+    color: var(--bs-light) !important;
+    background-color: #5dd49d !important;
 }
 
 .grade-button.btn-danger, #grade-table td.bg-danger
 {
-	color: var(--bs-dark) !important;
-	background-color: #dffbe4 !important;
+    color: var(--bs-dark) !important;
+    background-color: #dffbe4 !important;
 }
 
 .grade-button.btn-warning, #grade-table td.bg-warning
 {
-	color: var(--bs-dark) !important;
-	background-color: #a2e8c2 !important;
+    color: var(--bs-dark) !important;
+    background-color: #a2e8c2 !important;
 }
