--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -3,8 +3,8 @@
 <% @exams.each do |e| %>
 <p>
     <%= button_to e.name.humanize, exam_url(id: e.id), method: :post,  class: 'btn btn-secondary', data: { turbo: false } %>
-    <% if e.submits.any? && 
-        (e.submits.first.grade.present? || e.submits.first.locked?) %>
+    <% if e.pset.submits.any? &&
+        (e.pset.submits.first.grade.present? || e.pset.submits.first.locked?) %>
     Locked
     <% end %>
 </p>
