--- a/app/views/admin/exams/_form.html.erb
+++ b/app/views/admin/exams/_form.html.erb
@@ -66,7 +66,7 @@
 <div class="mb-3">
     <details>
         <summary>Edit commands</summary>
-        <%= text_area_tag 'exam[config][buttons][][template]', '', class: 'form-control', rows: 10 %>
+        <%= text_area_tag 'exam[config][buttons][][commands]', '', class: 'form-control', rows: 10 %>
     </details>
 </div>
 
