--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -14,5 +14,5 @@ URL: <%= link_to submit.url, submit.url %>
 <%= link_to 'Download', submission_download_path(submit), class: 'btn btn-sm btn-secondary', data: { turbo: false } %>
 <% end %>
 <% if submit.has_auto_feedback? %>
-<%= link_to t("check_results"), submission_feedback_path(submit), class:"btn btn-secondary", target: 'modal' %>
+<%= link_to t("check_results"), submission_feedback_path(submit), class:"btn btn-sm btn-secondary", target: 'modal' %>
 <% end %>
