--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -17,6 +17,10 @@
                     <li>
                         <%= link_to "Publish all", publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, class: 'small dropdown-item' %>
                     </li>
+                    <li>
+                        <%= link_to "Run checks for all", recheck_schedule_submits_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Run checks for all submits for this assignment?" }, class: 'small dropdown-item' %>
+                    </li>
+                    <hr>
                     <% groups.each do |group, user_list|%>
                     <% if group %>
                     <%= link_to "Unpublish for #{group.name}", reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, class: 'small dropdown-item' %>
