--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -6,7 +6,7 @@
 	<% end %>
 
 	<h1>
-		<%= @student.name %>
+		<%= @student.name_with_pronouns %>
 		<small class="ms-3"><%= @student.student_number %> - <%= @student.mail %></small>
 		<%= link_to bootstrap_icon('pencil', width: 16), edit_user_path(@student), class: 'px-2' %>
 	</h1>
