--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -7,3 +7,7 @@
 <%= link_to exam.name.titleize, edit_admin_exam_path(exam), class: 'list-group-item list-group-item-action' %>
 <% end %>
 </div>
+
+<div class="list-group mt-5">
+<%= link_to "Code list", list_codes_admin_exams_path, class: 'list-group-item list-group-item-action', data: { turbo: false } %>
+</div>
