--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,7 +7,8 @@
 			<%= f.text_field :mail,               placeholder: 'E-mail',    autocomplete: 'off' %><br>
 			<%= f.text_field :student_number,     placeholder: 'Student ID',autocomplete: 'off' %><br>
 			<%= f.text_field :status_description, placeholder: 'Status',    autocomplete: 'off' %>
-			<%= f.text_field :last_known_ip,      placeholder: '',          autocomplete: 'off' %>
+			<%= f.text_field :pin,                placeholder: 'Pin',       autocomplete: 'off' %>
+			<%= f.text_field :last_known_ip,      placeholder: 'IP',        autocomplete: 'off' %>
 		</p>
 		<p>
 			<%= f.label :avatar %>:
