--- a/app/views/admin/exams/list_codes.html.erb
+++ b/app/views/admin/exams/list_codes.html.erb
@@ -1,18 +1,90 @@
+<h1>Op alfabet</h1>
+
 <table>
     <thead>
         <tr>
             <th scope="col">Naam</th>
-            <th scope="col">Studentnummer</th>
+            <th scope="col">Groep</th>
             <th scope="col">Pincode</th>
         </tr>
     </thead>
     <tbody>
-        <% @users.each do |user| %>
+        <% @users.order(:name).each do |user| %>
         <tr>
             <td><%= user.name %></td>
-            <td><%= user.login %></td>
+            <td><%= user.group_name %></td>
             <td><%= user.pin%></td>
         </tr>
         <% end %>
     </tbody>
 </table>
+
+<h1>Op groep</h1>
+
+<% @groups.each do |group, users| %>
+<h2><%= group.join("\\") %>
+<table>
+    <thead>
+        <tr>
+            <th scope="col">Naam</th>
+            <th scope="col">Schema</th>
+            <th scope="col">Groep</th>
+            <th scope="col">Pincode</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% users.each do |user| %>
+        <tr>
+            <td><%= user.name %></td>
+            <td><%= user.schedule_name %></td>
+            <td><%= user.group_name %></td>
+            <td><%= user.pin%></td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
+<% end %>
+
+<style>
+    body
+    {
+        font: 10pt Verdana;
+    }
+
+    @media print {
+        body
+        {
+            text-size-adjust: none;
+            font: 9pt Verdana !important;
+        }
+
+        @page {
+            size: A4 portrait;
+            margin: 2.5cm;
+        }
+
+        h1, h2
+        {
+            page-break-before: always;
+        }
+    }
+
+    table
+    {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    table th
+    {
+        text-align: left;
+        padding: 0.25rem;
+    }
+
+    table td
+    {
+        border: 1px solid lightgray;
+        padding: 0.25rem;
+    }
+
+</style>
