--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -64,6 +64,12 @@
 
 <% end%>
 
+<% if Settings.exam_show_personal %>
+<%= menu_group 'Exam code' do %>
+    <span class="dropdown-item-text"><%= current_user.pin %></span>
+<% end %>
+<% end %>
+
 <% if !logged_in? %>
 <% if Auth::PinController.available? %>
 <%= menu_link t('account.login_via_pin'), auth_pin_login_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
