--- a/app/views/items/_grade.html.erb
+++ b/app/views/items/_grade.html.erb
@@ -7,15 +7,15 @@
 <p><%= t(:by) %> <%= grade.grader_name || "Graderbot" %></p>
 
 <p id="grade_buttons">
-	<% if Settings.grading && Settings.grading['grades'][grade.pset.name] && Settings.grading['grades'][grade.pset.name]['subgrades'] && !Settings.grading['grades'][grade.pset.name]['hide_subgrades'] %>
-		<% Settings.grading['grades'][grade.pset.name]['subgrades'].each_pair do |subgrade_name, unin| %>
+	<% if grade.grading_config['subgrades'] && !grade.grading_config['hide_subgrades'] %>
+		<% grade.grading_config['subgrades'].each_pair do |subgrade_name, unin| %>
 		<% k=subgrade_name %>
 		<% v=grade.subgrades[k] %>
 		<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge bg-secondary"><%= translate_subgrade(v) %></span></span>
 		<% end %>
 	<% end %>
 
-	<% if !Settings.grading || !Settings.grading['grades'][grade.pset.name] || !Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
+	<% if !grade.grading_config || !grade.grading_config['hide_calculated'] %>
 	<span class="btn btn-sm btn-outline-primary"> Grade <span class="badge bg-primary"><%= translate_grade(grade.assigned_grade) %></span></span>
 	<% end%>
 </p>
