--- a/app/views/submits/_grade.erb
+++ b/app/views/submits/_grade.erb
@@ -29,13 +29,13 @@
 		<% if subgrade_type == 'integer' || subgrade_type == 'float' %>
 		<div class=" flex-fill">
 			<label for="input_<%= subgrade_name %>" class="control-label"><%= subgrade_name.capitalize %><% if @submit.automatic_scores[subgrade_name] %>(<%= @submit.automatic_scores[subgrade_name] %>)<% end %></label>
-			<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" disabled name="grade[subgrades[<%= subgrade_name %>]]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
+			<input type="text" class="form-control form-control-sm" id="input_<%= subgrade_name %>" disabled name="grade[subgrades][<%= subgrade_name %>]" placeholder="" value="<%= @grade.subgrades[subgrade_name] if @grade.subgrades %>">
 		</div>
 		<% elsif subgrade_type == 'boolean' %>
 		<div class="">
 			<div class="checkbox">
 				<label>
-					<%= check_box_tag "grade[subgrades[#{subgrade_name}]]", -1, @grade.subgrades && @grade.subgrades[subgrade_name] && !@grade.subgrades[subgrade_name].zero?, disabled: true %> <%= subgrade_name.humanize %>
+					<%= check_box_tag "grade[subgrades][#{subgrade_name}]", -1, @grade.subgrades && @grade.subgrades[subgrade_name] && !@grade.subgrades[subgrade_name].zero?, disabled: true %> <%= subgrade_name.humanize %>
 				</label>
 			</div>
 		</div>
