--- a/app/views/admin/course/_exam_code.html.erb
+++ b/app/views/admin/course/_exam_code.html.erb
@@ -1,3 +1,5 @@
+<%= change_setting_form('exam_base_url', 'URL:') %>
+
 <%= change_setting_form('exam_code', 'Code:') %>
 
 <%= toggle_setting_form('exam_show_personal', 'Show personal exam codes in student menu') %>
