--- a/app/views/page/submit.html.erb
+++ b/app/views/page/submit.html.erb
@@ -6,6 +6,7 @@
         id: "page_form",
         data:
         {
+            turbo: "false",
             controller: "form-cache",
             form_cache_target: "form",
             action: "input->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
