--- a/app/views/page/submit.html.erb
+++ b/app/views/page/submit.html.erb
@@ -7,8 +7,9 @@
         data:
         {
             turbo: "false",
-            controller: "form-cache",
+            controller: "form-cache form-size-validator",
             form_cache_target: "form",
+            form_size_validator_max_size_mb_value: "9",
             action: "input->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
         }
     }
