--- a/app/views/page/_submit_form.html.erb
+++ b/app/views/page/_submit_form.html.erb
@@ -28,4 +28,4 @@
 <p class="mt-4"><%= t 'submit.url_field' %>: <%= text_field_tag 'url', nil, required:true, class:'form-control' %></p>
 <% end %>
 
-<p class="mt-4 mb-0 text-end"><%= submit_tag t('submit.button'), class:'btn btn-primary', data: { "disable-with": "Processing..." } %></p>
+<p class="mt-4 mb-0 text-end"><%= submit_tag t('submit.button'), class:'btn btn-primary' %></p>
