--- a/app/views/page/submit.html.erb
+++ b/app/views/page/submit.html.erb
@@ -10,7 +10,7 @@
             controller: "form-cache form-size-validator",
             form_cache_target: "form",
             form_size_validator_max_size_mb_value: "9",
-            action: "input->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
+            action: "input->form-cache#saveToLocalStorage submit->form-size-validator#validate submit->form-cache#clearLocalStorage"
         }
     }
     ) do %>
